<resources>
    <string name="app_name">RemoteControlClient</string>
    <string name="connecting_fab_text">Connect</string>
    <string name="connecting_fab_connected_text">Disconnect</string>
    <string name="connecting_ip_entry_text">IP address</string>
    <string name="connecting_port_entry_text">Port</string>
    <string name="commanding_toolbar_text">Choose a command</string>
    <string name="notice_to_complete">Please complete all of them!</string>
    <string name="no_command_fragment_notice">Please choose a command.</string>
    <string name="address_notice_text_no_address">IP: None Port: None State: None</string>
    <string name="connect_fail">Connect Failed</string>
    <string name="notice_connecting_running">Connect still running, please wait</string>
    <string name="verify_terminate">Terminate</string>
    <string name="verify_connect_failed">OK</string>
    <string name="send_command_button_text">Send</string>
    <string name="command_line_fragment_title">Command Line</string>
    <string name="notice_still_sending">Sending action still running.</string>
    <string name="address_notice_text_holder">IP: %s Port: %d State: %s</string>
    <string name="connect_state_connected">Connected</string>
    <string name="connect_state_disconnected">Disconnected</string>
    <string name="notice_disconnected">Server disconnected</string>
    <string name="verify_reconnect">Reconnect</string>
    <string name="test_fragment_title">Test</string>
    <string name="hint_for_command_line_input">Type command here</string>
    <string name="hint_for_command_result">Command result will be shown here</string>
    <string name="hint_for_test_text">Write some message to test</string>
    <string name="nav_test_title">Test</string>
    <string name="nav_command_line_title">Command Line</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="choose_command_button_text">Choose Command</string>
    <string name="nav_header_author">Author: azazo1</string>
    <string name="nav_header_email">Email: azazo1@qq.com</string>
    <string name="notice_searching_running">Searching still running, please wait.</string>
    <string name="nav_dir_title">Dir</string>
    <string name="dir_fragment_title">Dir</string>
    <string name="authenticate_failed">Invalid session, authenticate failed.\nYou can check your password.\nOr you can check your version.</string>
    <string name="show_text_fragment_title">ShowText</string>
    <string name="hint_for_show_time">Show time(milli)</string>
    <string name="nav_show_text_title">Show Text</string>
    <string name="hint_for_show_text_input">Write some message to show</string>
    <string name="file_subtitle_format">Size:%,d B</string>
    <string name="hint_for_path_selector">Type path to explore</string>
    <string name="notice_invalid_path">Invalid path</string>
    <string name="select_path_button_text"><![CDATA[>]]></string>
    <string name="nav_clipboard_title">Clipboard</string>
    <string name="hint_for_clipboard_text">edit(set) or result(get) will be here.</string>
    <string name="unlock_screen_title">Unlock</string>
    <string name="lock_screen_title">Lock</string>
    <string name="nav_lock_screen_title">Lock Screen</string>
    <string name="hint_for_input_lock_screen_password">Lock screen password, default if empty</string>
    <string name="hint_for_input_lock_screen_max_wrong_times">Max wrong times, default if empty</string>
    <string name="lock_screen_fragment_title">Lock Screen</string>
    <string name="clipboard_fragment_title">Clipboard</string>
    <string name="download_button_text">Download</string>
    <string name="file_info_alert_title">Information</string>
    <string name="hint_for_info_filename">filename</string>
    <string name="hint_for_info_filepath">filepath</string>
    <string name="hint_for_info_file_size">filesize</string>
    <string name="filename_text">Filename</string>
    <string name="filepath_text">File Abspath</string>
    <string name="file_size_text">File Size (Bytes)</string>
    <string name="launch_button_text">Launch</string>
    <string name="alert_downloading_title">Downloading</string>
    <string name="download_progress_format">Progress:%.2f%%, Now:%d, Total:%d</string>
    <string name="download_failed">Download Failed!</string>
    <string name="verify_terminate_or_ok">Cancel or Finish</string>
    <string name="download_successfully">Download Successfully!</string>
    <string name="verify_cancel_download">Cancel</string>
    <string name="verify_ok">OK</string>
    <string name="surf_website_fragment_title">Surf Website</string>
    <string name="surf_website_mode_toggle_default_text">Mode: Null</string>
    <string name="surf_website_mode_toggle_search_text">Mode: Search</string>
    <string name="surf_website_mode_toggle_url_text">Mode: Url</string>
    <string name="nav_surf_website_title">Surf Website</string>
    <string name="notice_invalid_browser_chosen">Chosen the invalid browser,\nand we will use default one</string>
    <string name="notice_get_browsers_retry">Retry to get browsers</string>
    <string name="hint_for_surf_website_url">Type url to surf here</string>
    <string name="hint_for_surf_website_default">Loading mode, please wait</string>
    <string name="hint_for_surf_website_search">Type the content to search here</string>
    <string name="succeed">Succeed</string>
    <string name="failed">Failed</string>
    <string name="get_browsers_bool_format">Get browsers %s</string>
    <string name="connecting_password_entry_text">Password (default if empty)</string>
    <string name="connecting_timeout">Connecting timeout, please retry</string>
    <string name="hint_for_process_search">Process\'s name or ID to search.</string>
    <string name="process_search_button_text">Search</string>
    <string name="process_manager_fragment_title">Process Manager</string>
    <string name="nav_process_manager_title">Process Manager</string>
    <string name="process_list_header_image_name_text">Image Name</string>
    <string name="process_list_header_session_name_text">Session Name</string>
    <string name="process_list_header_pid_text">PID</string>
    <string name="process_list_header_memory_usage_text">Memory Usage (KB)</string>
    <string name="kill_pid_process_button_text">Kill PID</string>
    <string name="kill_image_name_process_button_text">Kill Image Name</string>
    <string name="sorting_succeed">Sorting Succeed.</string>
    <string name="clipboard_clear_button_text">Clear</string>
    <string name="clipboard_get_button_text">Get</string>
    <string name="clipboard_set_button_text">Set</string>
    <string name="list_nav_group_title">In List</string>
    <string name="function_nav_group_title">Function</string>
    <string name="basic_nav_group_title">Basic</string>
    <string name="notice_to_correct_port">Please correct the port.</string>
    <string name="authenticate_failed_title">Authenticate Failed</string>
    <string name="connecting_timeout_title">Connect Timeout</string>
    <string name="permission_usage_inform">To save the information and To store remote file, we need permission</string>
    <string name="download_communicating_problem">We can\'t send the request to server</string>
    <string name="download_interrupted">Download interrupted</string>
    <string name="download_sum_error">Bad bytes in files</string>
    <string name="download_io_error">Local file disappeared</string>
    <string name="download_no_remote_file">No remote file</string>
    <string name="download_remote_file_too_big">File is too large</string>
    <string name="download_remote_file_access_failed">We can\'t access remote file</string>
    <string name="ip_search_interrupted">Searching interrupted</string>
    <string name="ip_search_failed">Sorry, I can\'t find any local server</string>
    <string name="ip_search_fab_text">Search local server</string>
    <string name="ip_search_succeed">Found server successfully</string>
    <string name="regex_toggle_button_on">Regex</string>
    <string name="regex_toggle_button_off">Plain</string>
    <string name="local_store_path_title">Store Path</string>
    <string name="permission_request_alert_title">Permission Needed</string>
    <string name="verify_permission_request_allow">Yes</string>
    <string name="verify_permission_request_ban">No</string>
    <string name="fetch_browsers_spinner_text">Long click to fetch browsers</string>
    <string name="search_left_time_format">Progress: %.2f%%, Left time: %s\nTotal:%d, Now: %d</string>
    <string name="nav_execute_title">Execute Python</string>
    <string name="action_bar_detach_fragment_title">Detach this Fragment</string>
    <string name="execute_button_text">Execute</string>
    <string name="hint_for_execute_input">Input python code</string>
    <string name="hint_for_execute_output">Execute output will be here</string>
    <string name="execute_fragment_title">Execute Python</string>
    <string name="execute_remote_permission_required">We haven\'t the permission to execute python code</string>
    <string name="mouse_left_button_text">Left</string>
    <string name="mouse_middle_button_text">Middle</string>
    <string name="mouse_right_button_text">Right</string>
    <string name="mouse_fragment_title">Mouse</string>
    <string name="nav_mouse_title">Mouse</string>
    <string name="touch_pad_text">Touch Pad</string>
    <string name="mouse_issue_toast">Notice: Don\'t use other commands when using the mouse</string>
    <string name="capture_take_button_text">Capture</string>
    <string name="capture_download_button_text">Download</string>
    <string name="capture_image_description">The image downloaded will be here, long click to open in other apps</string>
    <string name="capture_fragment_title">Capture</string>
    <string name="capture_mode_toggle_default_text">Mode: Null</string>
    <string name="capture_mode_toggle_camera_text">Camera</string>
    <string name="capture_mode_toggle_screen_text">Screen</string>
    <string name="nav_capture_title">Capture</string>
    <string name="capture_auto_toggle_auto_text">Auto</string>
    <string name="capture_auto_toggle_manual_text">Manual</string>
    <string name="open_capture_failed">Failed to call outer app</string>
    <string name="delete_successfully">Delete successfully</string>
    <string name="subsentence_for_deletion">, click here to delete local file</string>
    <string name="whether_overwrite">File exists, overwrite?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="modify_version_title">Modify Version Code</string>
    <string name="modify_version_detail">Force to modify version code, some functions may not work properly</string>
    <string name="invalid_part_number">Invalid part number, which must be positive int or 0</string>
    <string name="start_part_selection_label_format">Start part: %d, download will begin at this part</string>
    <string name="whether_delete">Whether to delete the file?</string>
    <string name="mouse_scroll_button_text">Scroll</string>
    <string name="mouse_frequency_adjustor_format">Adjust command sending interval: %d ms</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="pasting_local_clipboard">Pasting local clipboard…</string>
    <string name="posting_clipboard">Posting clipboard content to remote</string>
</resources>