<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fragment_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/filename_text" />

    <EditText
        android:id="@+id/filename_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:autofillHints="@string/hint_for_info_filename"
        android:gravity="start|top"
        android:hint="@string/hint_for_info_filename"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/filepath_text" />

    <EditText
        android:id="@+id/filepath_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:autofillHints="@string/hint_for_info_filepath"
        android:gravity="start|top"
        android:hint="@string/hint_for_info_filepath"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/file_size_text" />

    <EditText
        android:id="@+id/file_size_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:autofillHints="@string/hint_for_info_file_size"
        android:gravity="start|top"
        android:hint="@string/hint_for_info_file_size"
        android:inputType="number" />

    <Button
        android:id="@+id/launch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/launch_button_text"
        android:visibility="invisible" />

    <Button
        android:id="@+id/download_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:text="@string/download_button_text"
        android:visibility="invisible" />
</GridLayout>