<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fragment_padding"
    tools:context=".fragment.CaptureFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/capture_mode_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/capture_mode_toggle_camera_text"
            android:textOn="@string/capture_mode_toggle_screen_text" />

        <ToggleButton
            android:id="@+id/capture_auto_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/capture_auto_toggle_manual_text"
            android:textOn="@string/capture_auto_toggle_auto_text" />

    </LinearLayout>

    <ImageView
        android:id="@+id/capture_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/capture_image_description"
        android:src="@android:drawable/stat_notify_sync" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/fragment_padding">

        <Button
            android:id="@+id/capture_take_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/capture_take_button_text" />

        <Button
            android:id="@+id/capture_download_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/capture_download_button_text" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/getting_command_result_progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:max="100"
        android:visibility="invisible" />

</LinearLayout>