<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fragment_padding"
    tools:context=".fragment.ProcessManagerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/regex_toggle_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:textOff="@string/regex_toggle_button_off"
            android:textOn="@string/regex_toggle_button_on"
            android:textSize="@dimen/process_manager_button_font_size" />

        <EditText
            android:id="@+id/process_search_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=" "
            android:hint="@string/hint_for_process_search"
            android:inputType="text" />

        <Button
            android:id="@+id/process_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/process_search_button_text" />

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/image_name_header"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_columnWeight="2"
            android:text="@string/process_list_header_image_name_text" />


        <TextView
            android:id="@+id/pid_header"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_columnWeight="0.7"
            android:text="@string/process_list_header_pid_text" />

        <!--        <TextView-->
        <!--            android:id="@+id/session_name_header"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_column="2"-->
        <!--            android:layout_columnWeight="0.75"-->
        <!--            android:text="@string/process_list_header_session_name_text" />-->

        <TextView
            android:id="@+id/memory_usage_header"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="3"
            android:layout_columnWeight="0.75"
            android:text="@string/process_list_header_memory_usage_text" />
    </GridLayout>

    <ListView
        android:id="@+id/process_query_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ProgressBar
        android:id="@+id/getting_command_result_progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:max="100"
        android:visibility="invisible" />

</LinearLayout>