<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fragment_padding"
    tools:context=".fragment.MouseFragment">

    <FrameLayout
        android:id="@+id/mouse_touch_pad"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/mouse_touch_pad_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/touch_pad_text" />
    </FrameLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/mouse_buttons_bottom_margin">

        <TableRow android:layout_height="wrap_content">

            <Button
                android:id="@+id/mouse_left_button"
                android:layout_width="wrap_content"
                android:layout_gravity="right"
                android:text="@string/mouse_left_button_text"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/mouse_scroll_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mouse_scroll_button_text" />

            <Button
                android:id="@+id/mouse_right_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mouse_right_button_text" />
        </TableRow>

        <TableRow>

            <androidx.legacy.widget.Space />

            <Button
                android:id="@+id/mouse_middle_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mouse_middle_button_text" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/mouse_frequency_adjustor_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/mouse_frequency_adjustor_format" />

    <SeekBar
        android:id="@+id/mouse_frequency_adjustor"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:max="300" />
</LinearLayout>