<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fragment_padding"
    tools:context=".fragment.TestFragment">

    <EditText
        android:id="@+id/test_output"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_weight="0.2"
        android:autofillHints="@string/hint_for_command_result"
        android:gravity="start|top"
        android:hint="@string/hint_for_command_result"
        android:inputType="text" />

    <EditText
        android:id="@+id/test_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:autofillHints="@string/hint_for_test_text"
        android:gravity="start|top"
        android:hint="@string/hint_for_test_text"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/send_command_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/send_command_button_text" />

    <ProgressBar
        android:id="@+id/getting_command_result_progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:max="100"
        android:visibility="invisible" />
</LinearLayout>