<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fragment_padding">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/lock_screen_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible"
            tools:context=".fragment.LockScreenFragment">

            <EditText
                android:id="@+id/lock_password_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/hint_for_input_lock_screen_password"
                android:inputType="textVisiblePassword" />

            <EditText
                android:id="@+id/lock_max_wrong_times_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/fragment_padding"
                android:autofillHints="number"
                android:hint="@string/hint_for_input_lock_screen_max_wrong_times"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/unlock_screen_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible"
            tools:context=".fragment.LockScreenFragment">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_command_button_text" />
        </LinearLayout>
    </FrameLayout>

    <Button
        android:id="@+id/lock_screen_do_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/send_command_button_text" />

    <ProgressBar
        android:id="@+id/getting_command_result_progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:max="100"
        android:visibility="invisible" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/lock_screen_bottom_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/lock_screen_bottom_selector_bg"
        app:menu="@menu/menu_lock_screen" />
</LinearLayout>

